--- a/SEM2/PPS/notes/notes.tex
+++ b/SEM2/PPS/notes/notes.tex
@@ -19,12 +19,17 @@
 \theoremstyle{sltheorem}
 \newtheorem{definition}{Definition}[section]
 \newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{corollary}[theorem]{Corollary}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\st}{\text{ s.t }}
 \DeclareMathOperator{\lub}{LUB}
 \DeclareMathOperator{\glb}{GLB}
+\DeclareMathOperator{\hcf}{hcf}
+\DeclareMathOperator{\lcm}{lcm}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand*\B[1]{\textbf{#1}}
 \begin{document}
@@ -430,5 +435,91 @@
     \begin{align*}
         s_j=(-1)^ja_{n-j}.
     \end{align*}
+\end{theorem}
+\section{The Integers}
+\begin{theorem}
+    \textbf{The Remainder Theorem.} Let $a\in\N$ and $b\in\mathbb{Z}$.
+    There are unique integers $q\in\mathbb{Z}$ and $0\leq r<a$ s.t.
+    \begin{align*}
+        b=qa+r.
+    \end{align*}
+\end{theorem}
+\begin{definition}
+    For two integers $a$ and $b$ we say $a$ \textbf{divides} $b$, or write $a|b$, if there is an integer $c$ so that $b=ac$.
+\end{definition}
+\begin{lemma}
+    If $a|b$ and $b|a$, then $a=\pm b$.
+\end{lemma}
+\begin{lemma}
+    \textbf{The Easy Lemma.} Let $a$ and $b$ be integers and suppose $d|a$ and $d|b$. Then $d|ma+nb$ for all $m,n\in\N$.
+\end{lemma}
+\begin{definition}
+    Given two integers $a,b\in\mathbb{Z}$ that are not both zero, the \textbf{highest common factor} of $a$ and $b$ is the largest positive integer $d\in\N$ that divides both $a$ and $b$.
+    We denote this integer $d$ by $\hcf(a,b)$. If $\hcf(a,b)=1$, then we say that $a$ and $b$ are \textbf{coprime}.
+\end{definition}
+\begin{theorem}
+    \textbf{Bezout's Identity.} Let $a$ and $b$ be non-zero integers. Then there are integers $s$ and $t$ so that $\hcf(a,b)=sa+tb$.
+\end{theorem}
+\begin{corollary}
+    Let $a,b,c\in\Z$. Suppose $c\not=0$, $c|ab$ and $\hcf(a,c)=1$. Then $c|b$.
+\end{corollary}
+\begin{corollary}
+    Let $a,c\in\Z$ and let $d\in\Z$ be so that $d|a$ and $d|c$. Then $d|\hcf(a,c)$.
+\end{corollary}
+\begin{corollary}
+    Let $d$ be a common divisor of $a$ and $c$, which is divisible by all divisors of $a$ and $c$. Then $d=\pm\hcf(a,c)$.
+\end{corollary}
+\begin{corollary}
+    If $a,b\in\Z$, $p$ is prime, and $p|ab$, then either $p|a$ or $p|b$ (or both).
+\end{corollary}
+\begin{corollary}
+    If $n=p_1\cdots p_k$ is a product of primes, and if a prime $p$ divides $n$, then $p=p_i$ for some $i=1,...,k$.
+\end{corollary}
+\begin{theorem}
+    \textbf{The Fundamental Theorem of Arithmetic (FTA).} Let $n\geq 2$ be an integer.
+    \begin{itemize}
+        \item (Existence) Then $n$ is equal to a product $n=p_1^{r_1}\cdots p_k^{r_k}$ of powers of prime numbers where $p_1<...<p_k$ and $r_i>0$ for all $i$.
+        \item (Uniqueness) The factorization is unique: If we also have
+        \begin{align*}
+            p_1^{r_1}\cdots p_k^{r_k}=n=q_1^{s_1}\cdots q_l^{s_l}
+        \end{align*}
+        where $q_1<\cdots <q_l$ are primes and $s_i>0$, then $k=l$, $p_i=q_i$, and $r_i=s_i$ for all $i$.
+    \end{itemize}
+\end{theorem}
+\begin{lemma}
+    \textbf{Existence of prime decomposition, Part I.} Every integer $n\geq 2$ can be written as a product of primes $n=p_1\cdots p_k$.
+\end{lemma}
+\begin{lemma}
+    \textbf{Existence of prime decomposition, Part II.} Every integer $n\geq 2$ can be written as a product of powers of primes $n=p_1^{r_1}\cdots p_k^{r_k}$ and $r_i\geq 0$ for all $i$.
+\end{lemma}
+\begin{lemma}
+    \textbf{Uniqueness of prime decomposition.} Every integer $n$ can be written as a unique product of powers of primes $n=p_1^{r_1}\cdots p_k^{r_k}$.
+\end{lemma}
+\begin{theorem}
+    Let $n=p_1^{a_1}\cdots p_k^{a_k}$ be a prime decomposition (i.e. $p_i$s are prime, $p_1<\cdots<p_k$, and $a_i>0$). Then $m$ divides $n$ iff 
+    \begin{align*}
+        m=p_1^{b_1}\cdots p_k^{b_k}, \text{ with each }0\leq b_i \leq a.
+    \end{align*}
+\end{theorem}
+\begin{definition}
+    The least common multiple $\lcm(a,b)$ of positive integers $a$ and $b$ is the smalles positive integer divisible by both $a$ and $b$.
+\end{definition}
+\begin{theorem}
+    Let $a$ and $b$ have prime factorizations,
+    \begin{align*}
+        a=p_1^{r_1}\cdots p_m^{r_m}, \: b=p_1^{s_1}\cdots p_m^{s_m}.
+    \end{align*}
+    Here $p_i$'s are distinct, but $r_i$ and $s_i$ are allowed to be zero. Then:
+    \begin{itemize}
+        \item $\hcf(a,b) = p_1^{\min(r_1,s_1)}\cdots p_m^{\min(r_m,s_m)}$.
+        \item $\lcm(a,b) = p_1^{\max(r_1,s_1)}\cdots p_m^{\max(r_m,s_m)}$.
+        \item $\lcm(a,b) = ab / \hcf(a,b)$.
+    \end{itemize}
+\end{theorem}
+\begin{theorem}
+    Let $n$ be a positive integer. Then $\sqrt{n}\in\mathbb{Q}$ iff $n$ is a perfect square.
+\end{theorem}
+\begin{theorem}
+      If $a,b\in\N$ are coprime, and $ab$ is an $n$th power, then so are $a$ and $b$.
 \end{theorem}
 \end{document}
