Fixed the Comparison Theorem

--- a/SEM2/CAP/new-notes/notes.tex
+++ b/SEM2/CAP/new-notes/notes.tex
@@ -224,7 +224,7 @@
     \textbf{The comparison theorem.} Suppose that $f$ and $g$ are continuous functions with $f(x)\geq g(x)\geq 0$ for $x\geq a$.
     \begin{enumerate}
         \item If $\int_a^\infty f(x)\:dx$ is convergent, then $\int_a^\infty g(x)\:dx$ is convergent.
-        \item If $\int_a^\infty f(x)\:dx$ is divergent, the $\int_a^\infty g(x)\:dx$ is divergent.
+        \item If $\int_a^\infty g(x)\:dx$ is divergent, then $\int_a^\infty f(x)\:dx$ is divergent.
     \end{enumerate}
 \end{theorem}
 \section{Applications}
