--- a/SEM2/CAP/homework-7/homework.tex
+++ b/SEM2/CAP/homework-7/homework.tex
@@ -78,7 +78,7 @@ To revert the substitution, we use $\theta = \arcsin\left(\frac{x^2}{3}\right)$:
 \begin{align*}
   I(x)=\frac{1}{2}\arcsin\left(\frac{x^2}{3}\right)+C.
 \end{align*}
-This let's us evaluate the improper integral
+This lets us evaluate the improper integral
 \begin{align*}
   \int_0^{\sqrt{3}}\frac{x}{\sqrt{9-x^4}}dx = I(\sqrt{3})-I(0)=\frac{1}{2}\left(\frac{\pi}{2}-0\right)=\frac{\pi}{4}.
 \end{align*}
