--- a/CV/mlh/cv.tex
+++ b/CV/mlh/cv.tex
@@ -39,7 +39,7 @@ Franz Miltz \\ % Your name
 \textbf{Address} \\
 42 Craigmillar Park \\ % Address 3
 Edinburgh\\
-EH165PS\\
+EH16 5PS\\
 UK
 \vfill % Whitespace under this block to push it up under the photo
 \end{flushright}
@@ -132,16 +132,28 @@ UK
 %	SKILLS
 %----------------------------------------------------------------------------------------
 
-\CVSection{Software Development Skills}
+\CVSection{Skills}
 
 %------------------------------------------------
 
-\CVItem{Languages}
+\CVItem{Programming Languages}
 {\begin{itemize}
 	\item practical experience: Go, Python, Java, C\#
 	\item theoretical knowledge: C, C++, Rust, Haskell
 \end{itemize}}
-\CVItem{Operating Systems}{Linux, Windows}
+\CVItem{Operating Systems}{
+\begin{itemize}
+	\item Linux
+	\item Windows
+\end{itemize}
+}
+\CVItem{Languages}{
+	\begin{itemize}
+		\item German (native)
+		\item English (C1-C2)
+		\item French (approx. B1)
+	\end{itemize}
+}
 
 %------------------------------------------------
 
