--- a/CV/mlh/structure.tex
+++ b/CV/mlh/structure.tex
@@ -20,7 +20,7 @@
 %----------------------------------------------------------------------------------------
 
 \usepackage{XCharter} % Use the Bitstream Charter font
-\usepackage[utf8]{inputenc} % Required for inputting international characters
+%\usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 
 \usepackage[top=1cm,left=1cm,right=1cm,bottom=1cm]{geometry} % Modify margins
